--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Install Docker
       run: |
         sudo apt-get update
-        sudo apt-get install docker
+        sudo apt-get install -y docker
 
     - name: Checkout code
       uses: actions/checkout@v2
@@ -27,7 +27,6 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: sa-east-1
-        aws-profile: default
 
     - name: Log in to Amazon ECR
       id: login-ecr
@@ -41,20 +40,11 @@ jobs:
         docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.sa-east-1.amazonaws.com/frontend:$IMAGE_TAG
         echo "::set-output name=image::$IMAGE_TAG"
 
-    - name: SSH to EC2 and deploy
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ec2-user
-        key: ${{ secrets.EC2_SSH_KEY }}
-        script: |
-          IMAGE_URL=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.sa-east-1.amazonaws.com/frontend:${{ steps.build-image.outputs.image }}
-          aws ecr get-login-password --region sa-east-1 | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.sa-east-1.amazonaws.com
-          docker pull $IMAGE_URL
-          docker stop frontend || true
-          docker rm frontend || true
-          docker run -d --name frontend -p 80:80 $IMAGE_URL
-      env:
-        AWS_REGION: sa-east-1
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    - name: Deploy via SSM
+      run: |
+        IMAGE_URL=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.sa-east-1.amazonaws.com/frontend:${{ steps.build-image.outputs.image }}
+        aws ssm send-command \
+          --document-name "AWS-RunShellScript" \
+          --targets "Key=instanceIds,Values=${{ secrets.EC2_INSTANCE_ID }}" \
+          --parameters commands=["aws ecr get-login-password --region sa-east-1 | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.sa-east-1.amazonaws.com","docker pull $IMAGE_URL","docker stop frontend || true","docker rm frontend || true","docker run -d --name frontend -p 80:80 $IMAGE_URL"] \
+          --region sa-east-1
